' SPDX-License-Identifier: MIT
@startuml

'Hide empty parts:
hide empty fields
hide empty methods

'You can find more examles at https://plantuml.com/class-diagram

skinparam linetype ortho
'skinparam linetype polyline
package com.mercedesbenz.sechub.commons.encryption as common_encrypt {
    
    class PersistentCipherFactory
    class PersistentCipher
    class EncryptionSupport
}

package com.mercedesbenz.sechub.domain.schedule.encryption as schedule_encrypt{
    class ScheduleEncryptionService #aliceblue ##darkblue
    class ScheduleEncryptionPool #aliceblue ##darkblue {
           PersistentCipher getCipherForPoolId(Long poolId)
    }
}

PersistentCipherFactory --> PersistentCipher

ScheduleEncryptionService ..> PersistentCipherFactory
ScheduleEncryptionService -[#darkblue]> ScheduleEncryptionPool
ScheduleEncryptionService ..> EncryptionSupport
ScheduleEncryptionPool --> PersistentCipher